Fix cut off background on home page for narrow screens

--- a/nextjs-app/styles/globals.css
+++ b/nextjs-app/styles/globals.css
@@ -35,5 +35,6 @@ img {
 .app-wrapper {
   top: 0;
   min-height: 100vh;
+  width: 100vw;
   display: flex;
 }
