--- a/nextjs-app/styles/index.module.css
+++ b/nextjs-app/styles/index.module.css
@@ -1,5 +1,6 @@
 .pageContainer {
-    width: 100%;
+    width: 100vw;
+    min-width: 385px;
     height: 100vh;
     background: linear-gradient(to left, 
         rgba(255, 255, 255, 0), rgba(255, 255, 255, 1), rgba(255, 255, 255, 1)), 
